rewrite_using_modules/modules/webserver/04_ckout_web_security_group.tf
resource "aws_security_group" "web_server_sg" {
  name        = "${var.env}-web-server-sg"
  description = "Security group for web that allows web traffic from internet"
  vpc_id      = aws_vpc.ckout_vpc.id

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  ingress {
    from_port = 80
    to_port   = 80
    protocol  = "tcp"
    cidr_blocks = ["${var.vpc_cidr_block}"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.env}-web-server-sg"
    Environment = "${var.env}"
  }
}

resource "aws_security_group" "web_inbound_sg" {
  name        = "${var.env}-web-inbound-sg"
  description = "Allow HTTP from Anywhere"
  vpc_id      = aws_vpc.ckout_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.env}-web-inbound-sg"
  }
}
